fix button icon alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -330,6 +330,7 @@ input[type=file]::file-selector-button {
 }
 
 .buttonimage {
+  transform: translateX(-50%);
   height: 100%;
   width: auto;
 }
